{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 521,
  "lineage": "f8d6fd30-e039-80d7-2a6b-5d1abef16f67",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "net_ca1_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0bc691261a82b32bc",
            "arn": "arn:aws:ec2:eu-west-1:187445350228:instance/i-04c06c440a1c76826",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c06c440a1c76826",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.small",
            "ipv6_address_count": 0,
            "key_name": "net_ca1_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c218e8140bd1a762"
              }
            ],
            "primary_network_interface_id": "eni-0c218e8140bd1a762",
            "private_dns": "ip-172-31-11-131.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.11.131",
            "public_dns": "ec2-108-130-167-96.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.130.167.96",
            "region": "eu-west-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-093acf7625c0a656a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_http_https_ssh"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026c70c4ff754b1a0",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e02faa94941c19f7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187445350228",
            "id": "i-04c06c440a1c76826",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_key_pair.key_pair",
            "aws_security_group.allow_http_https_ssh",
            "data.local_sensitive_file.public_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_https_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:187445350228:security-group/sg-0e02faa94941c19f7",
            "description": "Allow only HTTP, HTTPS and SSH traffic",
            "egress": [],
            "id": "sg-0e02faa94941c19f7",
            "ingress": [],
            "name": "allow_http_https_ssh",
            "name_prefix": "",
            "owner_id": "187445350228",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-019210938552f9c3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187445350228",
            "id": "sg-0e02faa94941c19f7",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:187445350228:security-group-rule/sgr-002da77971b1d34d9",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-002da77971b1d34d9",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0e02faa94941c19f7",
            "security_group_rule_id": "sgr-002da77971b1d34d9",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187445350228",
            "id": "sgr-002da77971b1d34d9",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.allow_http_https_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_inbound_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:187445350228:security-group-rule/sgr-00716c4b5457c743a",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-00716c4b5457c743a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0e02faa94941c19f7",
            "security_group_rule_id": "sgr-00716c4b5457c743a",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187445350228",
            "id": "sgr-00716c4b5457c743a",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.allow_http_https_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_inbound_https_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:187445350228:security-group-rule/sgr-0cf3fb57f6c12b08c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-0cf3fb57f6c12b08c",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0e02faa94941c19f7",
            "security_group_rule_id": "sgr-0cf3fb57f6c12b08c",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187445350228",
            "id": "sgr-0cf3fb57f6c12b08c",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.allow_http_https_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:187445350228:security-group-rule/sgr-0b3e9230299526db4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b3e9230299526db4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-1",
            "security_group_id": "sg-0e02faa94941c19f7",
            "security_group_rule_id": "sgr-0b3e9230299526db4",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "187445350228",
            "id": "sgr-0b3e9230299526db4",
            "region": "eu-west-1"
          },
          "dependencies": [
            "aws_security_group.allow_http_https_ssh"
          ]
        }
      ]
    }
  ]
}